# storage/api-docs/api-docs.json
@@ -31,6 +31,49 @@
                 }
             }
         },
+        "/profile/{id}": {
+            "post": {
+                "tags": [
+                    "Patient"
+                ],
+                "summary": "Update patient profile",
+                "description": "Update the profile of a specific patient",
+                "operationId": "updateProfilePatient",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the patient",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/PatientProfileUpdateRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Profile updated successfully",
+                        "content": {
+                            "application/json": {}
+                        }
+                    },
+                    "404": {
+                        "description": "Patient not found"
+                    }
+                }
+            }
+        },
         "/api/patient/signup": {
             "post": {
                 "tags": [
@@ -122,6 +165,26 @@
                     "role": {
                         "description": "User Role",
                         "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "PatientProfileUpdateRequest": {
+                "required": [
+                    "name",
+                    "email"
+                ],
+                "properties": {
+                    "name": {
+                        "description": "The name of the patient",
+                        "type": "string",
+                        "example": "John Doe"
+                    },
+                    "email": {
+                        "description": "The email address of the patient",
+                        "type": "string",
+                        "format": "email",
+                        "example": "johndoe@example.com"
                     }
                 },
                 "type": "object"
